# Package ######################################################################

[build-system]
requires = ["setuptools >= 62.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rfcl"
description = "Reverse Forward Curriculum Learning"
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Anon", email = "anonresearchrl@gmail.com" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "Robotics", "Jax", "RL", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy >=1.22.0",
    "scipy",

    # RL
    "gymnasium==0.29.1",
    "gymnax",

    # Jax Related
    "chex",
    "distrax",
    "flax",
    "optax",

    # Video generation
    "moviepy",

    # Exp tracking
    "tensorboard",
    "tensorboardX",
    "wandb",
    "omegaconf",

    # Vision
    "opencv-python",
    "transforms3d",
    
    # Other
    "tqdm",
    "dacite",
    "matplotlib",
    "h5py"
]
dynamic = ["version"]

[project.optional-dependencies]

mani-skill2 = ["mani_skill2"]
dm-control = ["dm_control"]
brax = ["brax", "gymnax"]
gymnax = ["gymnax"]

dev = ["ipdb", "jupyterlab", "ipython", "black", "isort"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rfcl", "rfcl.*"]

# Linters and Test tools #######################################################

[tool.black]
line-length = 150
safe = true

[tool.isort]
atomic = true
profile = "black"
src_paths = ["rfcl", "scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3